[package]
name = "json_test" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Ernesto <ernestodemenibus@gmail.com>"]
edition = "2021"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.134"
serde_xml = "0.9"
